# cmake-project-template

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: Build.yml  build.yml  cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/alligator_welcome/: CMakeLists.txt  alligator_welcome.cpp
src/: CMakeLists.txt
src/tiny_alligator/: Alligator.hpp  CMakeLists.txt
tests/: CMakeLists.txt  tiny_alligator.cpp
